This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-09-01:

- Fixed a bug where 'command -x' would create a tracked alias for a command,
  causing 'whence' not to find an /opt/ast/bin built-in command correctly.

2022-08-30:

- In the vi line editor, 'C' and 'c$' at the start of a line now enter insert
  mode instead of beeping, and 'I' jumps to the first non-blank character on
  the line instead of the start of the line. These changes are consistent
  with standard vi(1) behavior and with Bolsky & Korn (1995, p. 121).

- Aliases for many GNU long options have been added to the /opt/ast/bin
  built-in commands. Additionally, 'kill -s' now has a --signal long option
  alias compatible with the util-linux option.

- All of the /opt/ast/bin built-ins available in src/lib/libcmd (excluding
  vmstate if vmalloc isn't enabled) can now be enabled with the new
  SHOPT_ALL_LIBCMD setting in src/cmd/ksh93/SHOPT.sh.

2022-08-25:

- Release 1.0.3.

- In the vi line editor, a bug was fixed that caused erratic behaviour after
  using the 0 or ^ commands when already at the beginning of the command line.

2022-08-24:

- Fixed a bug that caused ksh in the vi editor mode to crash or produce
  invalid completions if ESC = was used at the beginning of a line. Both
  tab and = completions are now disabled at the start of the command line.

- Fixed ksh freezing or using excessive memory if HISTSIZE is assigned a
  pathologically large value. A new bounds check makes the theoretical
  maximum number of history lines equal to the number of bytes kept in the
  history file at cleanup time. On 64-bit systems, that maximum is 16384.

2022-08-20:

- Fixed a bug in command line options processing that caused short-form
  option equivalents on some built-in commands to be ignored after one use,